@@ -253,6 +253,9 @@ enum {
   W_REPEAT_QUALIFIER            = 224, /* the same qualifier appears more than once */
   W_NO_TYPE_SPECIFIER           = 225, /* type specifier missing in declaration */
   E_NO_TYPE_SPECIFIER           = 226, /* type specifier missing in declaration */
+  E_MULTIPLE_DEFAULT_IN_GENERIC = 227, /* multiple default expressions in generic association */
+  E_MULTIPLE_MATCHES_IN_GENERIC = 228, /* multiple matching expressions in generic association */
+  E_NO_MATCH_IN_GENERIC         = 229, /* no matching expression in generic association */
 
   /* don't touch this! */
   NUMBER_OF_ERROR_MESSAGES             /* Number of error messages */
